--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,18 @@
+file.reference.sf-teste-vendor=vendor
+file.reference.vendor-composer=vendor/composer
 file.reference.vendor-doctrine=vendor/doctrine
+file.reference.vendor-phpdocumentor=vendor/phpdocumentor
+file.reference.vendor-sensio=vendor/sensio
 file.reference.vendor-symfony=vendor/symfony
 file.reference.vendor-twig=vendor/twig
 include.path=\
     ${php.global.include.path}:\
+    ${file.reference.vendor-doctrine}:\
     ${file.reference.vendor-symfony}:\
+    ${file.reference.vendor-phpdocumentor}:\
+    ${file.reference.vendor-sensio}:\
     ${file.reference.vendor-twig}:\
-    ${file.reference.vendor-doctrine}
+    ${file.reference.vendor-composer}
 php.version=PHP_70
 source.encoding=UTF-8
 src.dir=src
