--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,6 +2,7 @@ file.reference.sf-teste-vendor=vendor
 file.reference.vendor-composer=vendor/composer
 file.reference.vendor-doctrine=vendor/doctrine
 file.reference.vendor-phpdocumentor=vendor/phpdocumentor
+file.reference.vendor-phpunit=vendor/phpunit
 file.reference.vendor-sensio=vendor/sensio
 file.reference.vendor-symfony=vendor/symfony
 file.reference.vendor-twig=vendor/twig
@@ -12,7 +13,8 @@ include.path=\
     ${file.reference.vendor-phpdocumentor}:\
     ${file.reference.vendor-sensio}:\
     ${file.reference.vendor-twig}:\
-    ${file.reference.vendor-composer}
+    ${file.reference.vendor-composer}:\
+    ${file.reference.vendor-phpunit}
 php.version=PHP_70
 source.encoding=UTF-8
 src.dir=src
