--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,10 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "phpunit/phpunit": "6.0",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
+        "symfony/phpunit-bridge": "*",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
         "symfony/web-server-bundle": "*"
