--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,5 +1,5 @@
 framework:
-    default_locale: 'fr'
+    default_locale: 'en'
     translator:
         paths:
             - '%kernel.project_dir%/translations'
