--- a/config/services.yaml
+++ b/config/services.yaml
@@ -55,6 +55,10 @@ services:
             #- { db_username: user, db_password: my_password }
             - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
             - { lock_mode: 1 }
+        
+    App\Event\UserSubscriber:
+        arguments:
+            $defaultLocale: '%kernel.default_locale%'
             
     App\Event\LocaleSubscriber:
         arguments:
